--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
         padding: 0px;
       }
       iframe {
-        width: 450px;
-        height: 600px;
+        width: 100%;
+        height: 100%;
+      }
+      .box {
+        height: 400px;
+        width: 400px;
+        transition: width 4s ease-out 1s;
+  					    height 2s ease-out 1s;
+      }
+      .box:hover {
+        height: 100%;
+        width: 100%;
+      }
+      body, html {
+        overflow: hidden;
+        height: 100%;
       }
     </style>
   </head>
