--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Animation</title>
     <style>
       * {
@@ -29,9 +29,8 @@
     </style>
   </head>
   <body>
-    <div class="">
+    <div class="box">
       <iframe src="http://www.laika.com" frameborder="0"></iframe>
-
     </div>
   </body>
 </html>
